fix:added horizontal scrollbar in excel tables

--- a/src/app/module/main/main-valuation/group-model-review/balance-sheet-details/balance-sheet-details.component.scss
+++ b/src/app/module/main/main-valuation/group-model-review/balance-sheet-details/balance-sheet-details.component.scss
@@ -148,3 +148,21 @@ mat-header-cell{
     opacity: 1; 
   }
   //input scss ends
+
+  .scroll-container{
+    width: 100%; 
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  .scroll-content{
+    display: inline-block;
+  }
+
+  .mat-column-Particulars {
+    position: sticky;
+    left: 0;
+    min-width: 25%;
+  }
+  .increase-table-width {
+    width: 1500px;
+  }
